# anoma-wasm-multitoken

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-test-runners.yml  ci.yml  quickstart.yml
crates/e2e_tests/: Cargo.toml  README.md
crates/shared/: Cargo.toml  README.md
crates/shared/src/: data.rs  keys.rs  lib.rs  multitoken.rs  read.rs  signed.rs  update.rs
crates/test_runners/: Cargo.toml  README.md
crates/test_runners/src/lib/: chain.rs  client.rs  env.rs  exec.rs  file.rs  keys.rs  mod.rs  wallet.rs
crates/tx_burn_multitoken/: Cargo.toml  README.md
crates/tx_burn_multitoken/src/: tx.rs
crates/tx_example/: Cargo.toml
crates/tx_mint_multitoken/: Cargo.toml  README.md
crates/tx_mint_multitoken/src/: data.rs  lib.rs  tx.rs
crates/vp_example/: Cargo.toml
crates/vp_multitoken/: Cargo.toml  README.md
crates/vp_multitoken/src/: keys.rs  lib.rs  read.rs  vp.rs
