[workspace]
resolver = "2"

members = [
  "crates/*",
]

[patch.crates-io]
# should match wasm/wasm_source/Cargo.toml in the Anoma repo
# TODO temp patch for <https://github.com/near/borsh-rs/issues/82>, <https://github.com/near/borsh-rs/issues/84> and more tba.
borsh = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-schema-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}

[patch."https://github.com/anoma/namada"]
# specify the specific version of Anoma being worked against here
# https://stackoverflow.com/a/72261235/2387626
namada_tx_prelude = {git = "https://github.com/anoma/namada?rev=v0.7.1"}
namada_vp_prelude = {git = "https://github.com/anoma/namada?rev=v0.7.1"}
namada = {git = "https://github.com/anoma/namada?rev=v0.7.1"}
namada_tests = {git = "https://github.com/anoma/namada?rev=v0.7.1"}

[profile.dev]
# smaller and faster wasm (https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto)
lto = true
# tell llvm to optimize for size (https://rustwasm.github.io/book/reference/code-size.html#tell-llvm-to-optimize-for-size-instead-of-speed)
opt-level = 'z'

[profile.test]
lto = false
opt-level = 0

[profile.release]
# smaller and faster wasm (https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto)
lto = true
# simply terminate on panics, no unwinding
panic = "abort"
# tell llvm to optimize for size (https://rustwasm.github.io/book/reference/code-size.html#tell-llvm-to-optimize-for-size-instead-of-speed)
opt-level = 'z'
strip = 'symbols'