[package]
name = "e2e_tests"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "consecutive_mints"
path = "src/bin/consecutive_mints/main.rs"

[[bin]]
name = "mint_then_burn"
path = "src/bin/mint_then_burn/main.rs"

[dependencies]
shared = { path = "../shared" }
test_runner = { git = "https://github.com/anoma/e2e-test-helpers", rev = "f64f7c1549cb1d4cea677fa445aa81aaa4c1aebe" }
namada = { git = "https://github.com/anoma/namada", tag = "v0.9.0", features = [
    "rand",
] }
rand = "0.8"
eyre = "0.6.8"
