[package]
name = "e2e_tests"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "consecutive_mints"
path = "src/bin/consecutive_mints/main.rs"

[[bin]]
name = "mint_then_burn"
path = "src/bin/mint_then_burn/main.rs"

[dependencies]
shared = { path = "../shared" }
test_runner = { git = "https://github.com/anoma/e2e-test-helpers", rev = "24871307c885f21fb9ea2b8f36c5813c7857fab9" }
namada_core = { git = "https://github.com/anoma/namada", tag = "v0.11.0", features = [
    "rand",
] }
rand = "0.8"
eyre = "0.6.8"
