[package]
name = "shared"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
namada_tx_prelude = {git = "https://github.com/anoma/namada"}
borsh = "0.9.0"
eyre = "0.6.8"
serde = {version = "1.0.125", features = ["derive"]}

[dev-dependencies]
namada = {git = "https://github.com/anoma/namada"}
namada_tests = {git = "https://github.com/anoma/namada"}