[package]
name = "test_runners"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "consecutive_mints"
path = "src/bin/consecutive_mints/main.rs"

[[bin]]
name = "mint_then_burn"
path = "src/bin/mint_then_burn/main.rs"

[dependencies]
shared = { path = "../shared" }
test_runner = { git = "https://github.com/anoma/test_runner.git" }
namada = {git = "https://github.com/anoma/namada", features = ["rand"]}
borsh = "0.9.0"
rand = "0.8"
tempfile = "3.3.0"
eyre = "0.6.8"
hex = "0.4.3"
retry = "1.3.1"
fs_extra = "1.2.0"