[package]
name = "tx_burn_multitoken"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anoma_tx_prelude = {git = "https://github.com/anoma/anoma"}
borsh = "0.9.0"
wee_alloc = "0.4.5"
eyre = "0.6.8"
serde = {version = "1.0.125", features = ["derive"]}
shared = { path = "../shared" }

[dev-dependencies]
anoma_tests = {git = "https://github.com/anoma/anoma"}
anoma = {git = "https://github.com/anoma/anoma"}
rand = "0.8"