[package]
name = "tx_burn_multitoken"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
namada_tx_prelude = { git = "https://github.com/anoma/namada", rev = "v0.7.1" }
borsh = "0.9.0"
wee_alloc = "0.4.5"
eyre = "0.6.8"
serde = { version = "1.0.125", features = ["derive"] }
shared = { path = "../shared" }

[dev-dependencies]
namada_tests = { git = "https://github.com/anoma/namada", rev = "v0.7.1" }
namada = { git = "https://github.com/anoma/namada", rev = "v0.7.1" }
rand = "0.8"
